
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef size_t* PDWORD ;
typedef size_t DWORD ;
typedef int BOOL ;


 int FALSE ;
 int TRUE ;

BOOL FindAndReplaceMember(PDWORD Structure,
                          DWORD CurrentValue,
                          DWORD NewValue,
                          DWORD MaxSize)
{
    DWORD i, Mask;



    Mask = ~7;


    CurrentValue &= Mask;


    for (i = 0; i < MaxSize; i++) {
        if ((Structure[i] & Mask) == CurrentValue) {

            Structure[i] = NewValue;
            return TRUE;
        }
    }


    return FALSE;
}
